<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TacRox</string>
    <string name="action_settings">Settings</string>
   
    
    <string name="add_quotes">Add Quotes</string>
    <string name="Quote">Quote:</string>
    <string name="Author">Author:</string>
     
    
    <string name="my_quote_list_title">My quote list</string>
    <string name="add_button">Add</string>
    
    <string name="save_data">Save</string>

    <string name="edit_quote_title">Edit Quote</string>
    <string name="edit_button">Edit</string>
    <string name="delete_button">Delete</string>
     <string name="quoteView">Quote</string>
     <string name="authorView">Author</string>
     <string name="saveEdit">Save edit</string>
     <string name="largeText">quote</string>
     <string name="text">author</string>
      <string name="slideButton">Slide</string>

     <string name="button4">Relax</string>
     <string name="button5">Cry</string>
     <string name="button6">Think+</string>
     <string name="poptitle">Be careful!</string>
      <string name="popmessage">Please write a quote more than 30 characters !</string>
      <string name="poptitle1">Instruction</string>
      <string name="popmessage1">Shake the phone to read other quotes!</string>
      <string name="nauthor">Unknown author</string>
<string name="close">Closing application!</string>
<string name="question">Do you want to close this application?</string>
<string name="yes">Yes</string>
<string name="no">No</string>


     <string name="TextView">How do you feel today?</string>
     

     
      <string name="sad_des">Sad button</string>
     <string name="cry_des">Crying button</string>
     <string name="relax_des">Relax button</string>
     <string name="think_des">Think button</string>
     <string name="quote_des">Quote button</string>
     <string name="happy_des">Happy button</string>
     <string name="stress_des">Stress button</string>
      
      <string name="webButton">Webi</string>
     

      
                
        
 
</resources>
