<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
<TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="114dp"
        android:text="@string/quoteView"
        android:typeface="serif"
        android:textStyle="bold|italic"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:typeface="serif"
        android:textStyle="bold|italic"
        android:textSize="17sp"
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/authorView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:onClick="removeItem"
        android:layout_marginTop="20dp"
        android:text="@string/delete_button" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:onClick="editItems"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="72dp"
        android:text="@string/edit_button" />

</RelativeLayout>
