<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >
    

    <TextView
        android:id="@+id/addNewItemsTittle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/add_quotes"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:background="#000000" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="57dp"
        android:background="#006600"
        android:onClick="addNewItems"
        android:text="@string/save_data"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/textAuthorAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/amountTextView"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/itemTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/saveButton"
        android:layout_below="@+id/addNewItemsTittle"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="34dp"
        android:text="@string/Quote" />

    <TextView
        android:id="@+id/amountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/itemTextView"
        android:layout_below="@+id/textQuoteAdd"
        android:layout_marginTop="64dp"
        android:text="@string/Author" />

    <EditText
        android:id="@+id/textQuoteAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/itemTextView"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:inputType="textMultiLine" />
   
</RelativeLayout>